Prevent the page from jumping due to the vertical scrollbar

--- a/custom/styles.styl
+++ b/custom/styles.styl
@@ -1,3 +1,8 @@
+// Prevent the page from jumping due to the vertical scrollbar
+html {
+    width: 100vw;
+}
+
 /* remove the page title and top margin all together on custom pages */
 .page .post-header {
     display: none;
